--- a/app/scss/components/_1_banner.scss
+++ b/app/scss/components/_1_banner.scss
@@ -72,8 +72,8 @@ Usage: codyhouse.co/license
 }
 
 .banner__figure {
-  height: 0;
-  padding-bottom: 50%;
+  height: 300px;
+  // padding-bottom: 50%;
   transition: 0.3s var(--ease-out);
   background-position: center center;
   background-repeat: no-repeat;
